[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/Entities/Miner/States/QuenchThirst.gd" type="Script" id=1]
[ext_resource path="res://Classes/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Game/Entities/Miner/States/VisitBankAndDepositGold.gd" type="Script" id=3]
[ext_resource path="res://Game/Entities/Miner/States/EatStew.gd" type="Script" id=4]
[ext_resource path="res://Game/Entities/Miner/Miner.gd" type="Script" id=5]
[ext_resource path="res://Game/Entities/Miner/States/EnterMineAndDigForNugget.gd" type="Script" id=6]
[ext_resource path="res://Game/Entities/Miner/States/GoHomeAndSleepTilRested.gd" type="Script" id=7]
[ext_resource path="res://Game/Entities/Miner/States/Global/MinerGlobalState.gd" type="Script" id=8]
[ext_resource path="res://Game/Entities/Miner/States/TravelToLocation.gd" type="Script" id=9]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.168627, 0.403922, 0.741176, 1 )

[node name="Miner" type="Spatial"]
script = ExtResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Global" type="Node" parent="StateMachine"]

[node name="MinerGlobalState" type="Node" parent="StateMachine/Global"]
script = ExtResource( 8 )

[node name="States" type="Node" parent="StateMachine"]

[node name="EnterMineAndDigForNugget" type="Node" parent="StateMachine/States"]
script = ExtResource( 6 )

[node name="VisitBankAndDepositGold" type="Node" parent="StateMachine/States"]
script = ExtResource( 3 )

[node name="GoHomeAndSleepTilRested" type="Node" parent="StateMachine/States"]
script = ExtResource( 7 )

[node name="QuenchThirst" type="Node" parent="StateMachine/States"]
script = ExtResource( 1 )

[node name="EatStew" type="Node" parent="StateMachine/States"]
script = ExtResource( 4 )

[node name="TravelToLocation" type="Node" parent="StateMachine/States"]
script = ExtResource( 9 )

[node name="CSGSphere" type="CSGSphere" parent="."]
material = SubResource( 1 )

[node name="MinerLabel" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.74999, 0 )
pixel_size = 0.04
modulate = Color( 0, 0, 0, 1 )
text = "Miner"
